<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <Spinner
        android:id="@+id/spinnerLangue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:entries="@array/langues" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/editTextNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prenom"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/editTextPrenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_prenom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_age"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/domaine"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/editTextDomaine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_domaine" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telephone"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/editTextTelephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_telephone"
        android:textAlignment="viewStart"
        android:gravity="start"
        android:inputType="phone" />

    <Button
        android:id="@+id/buttonValider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valider"
        android:layout_marginTop="16dp" />

</LinearLayout>
